# trees

./: .gitignore  CMakeLists.txt  README.md  aliquot.c  aliquot.h
docs/: math.md
src/: aliquot.c
